--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "password-input-component",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "a password input component with a tooltip that displays password requirements and if they are met or not",
   "main": ".build/password-input.js",
   "scripts": {
@@ -18,7 +18,9 @@
     "element",
     "html",
     "form",
-    "react"
+    "react",
+    "UI",
+    "UX"
   ],
   "author": "jonmendi",
   "license": "ISC",
