--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "webpack": "^5.90.1",
     "webpack-cli": "^5.1.4"
   },
-  "dependencies": {
+  "peerDependencies": {
     "react": "^18.2.0"
   }
 }
